@@ -18,7 +18,7 @@
  * This software is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY
  * KIND, either express or implied.
  *
- * $Id: main.c,v 1.467 2008-07-31 01:12:06 danf Exp $
+ * $Id: main.c,v 1.468 2008-08-01 18:41:14 danf Exp $
  ***************************************************************************/
 #include "setup.h"
 
@@ -651,7 +651,7 @@ static void help(void)
     "Usage: curl [options...] <url>",
     "Options: (H) means HTTP/HTTPS only, (F) means FTP only",
     "    --anyauth       Pick \"any\" authentication method (H)",
-    " -a/--append        Append to target file when uploading (F)",
+    " -a/--append        Append to target file when uploading (F/SFTP)",
     "    --basic         Use HTTP Basic Authentication (H)",
     "    --cacert <file> CA certificate to verify peer against (SSL)",
     "    --capath <directory> CA directory to verify peer against (SSL)",
